--- a/index.html
+++ b/index.html
@@ -3,32 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weathre app</title>
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Weather app</title>
   </head>
   <body>
-    <form>
+    <div class="container">
       <header>
-        <input type="text" placeholder="Enter a city....." required />
-        <input type="submit" value="Search" />
+        <form class="form-container">
+          <input
+            type="text"
+            placeholder="Enter a city....."
+            required
+            class="search-input"
+          />
+          <input type="submit" value="Search" class="search-btn" />
+        </form>
       </header>
-    </form>
-    <div>
-      <h1>Paris</h1>
-      <p>
-        Tuesday 15:20, moderate rain <br />
-        Humidity: <strong>87%</strong>, Windy: <strong>7.2km/h</strong>
-      </p>
-    </div>
-    <footer>
-      <p>
+      <main>
+        <div class="weather-app">
+          <div>
+            <h1 class="city">Paris</h1>
+            <p class="city-temp">
+              Tuesday 15:20, moderate rain <br />
+              Humidity: <strong>87%</strong>, Windy: <strong>7.2km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-info">
+            <div class="weather-app-icon">⛅</div>
+            <div class="weather-app-temp">12</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
+        </div>
+      </main>
+      <footer>
         This code was coded by
         <a href="https://github.com/">Mariam</a> and is on
-        <a href="https://github.com/princessmirina/weather-app1">Github</a> and
-
+        <a href="https://github.com/princessmirina/weather-app1">Github</a>
+        and
         <a href="https://app.netlify.com/sites/rad-brigadeiros-005042/overview"
           >hosted on Netlify</a
         >
-      </p>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
