adde axios and search functionality using API

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <title>Weather app</title>
   </head>
   <body>
@@ -23,7 +24,7 @@
       <main>
         <div class="weather-app">
           <div>
-            <h1 class="city" id="weather-app-city">Paris</h1>
+            <h1 class="city" id="weather-app-city">--</h1>
             <p class="city-temp">
               Tuesday 15:20, moderate rain <br />
               Humidity: <strong>87%</strong>, Windy: <strong>7.2km/h</strong>
@@ -31,7 +32,7 @@
           </div>
           <div class="weather-app-info">
             <div class="weather-app-icon">⛅</div>
-            <div class="weather-app-temp">12</div>
+            <div class="weather-app-temp" id="app-temp">--</div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
