added more weather data

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           <div>
             <h1 class="city" id="weather-app-city">--</h1>
             <p class="city-temp">
-              Tuesday 15:20, moderate rain <br />
-              Humidity: <strong>87%</strong>, Windy: <strong>7.2km/h</strong>
+              <span id="time"></span>, <span id="description"></span> <br />
+              Humidity: <strong id="humidity">87%</strong>, Windy:
+              <strong id="windy">7.2km/h</strong>
             </p>
           </div>
           <div class="weather-app-info">
