--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </p>
           </div>
           <div class="weather-app-info">
-            <div class="weather-app-icon">⛅</div>
+            <div id="icon"></div>
             <div class="weather-app-temp" id="app-temp">--</div>
             <div class="weather-app-unit">°C</div>
           </div>
