added weather-forecast to an html file and stlye

--- a/index.html
+++ b/index.html
@@ -37,6 +37,64 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
+        <div class="weather-forecast">
+          <div class="weather-forecast-details">
+            <div class="weather-forecast-day">Sun</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-degree">
+              <div class="weather-forecast-unit"><strong>15&#176;</strong></div>
+              <div class="weather-forecast-unit2">9&#176;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-details">
+            <div class="weather-forecast-day">Mon</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-degree">
+              <div class="weather-forecast-unit"><strong>15&#176;</strong></div>
+              <div class="weather-forecast-unit2">9&#176;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-details">
+            <div class="weather-forecast-day">Tue</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-degree">
+              <div class="weather-forecast-unit"><strong>15&#176;</strong></div>
+              <div class="weather-forecast-unit2">9&#176;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-details">
+            <div class="weather-forecast-day">Wed</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-degree">
+              <div class="weather-forecast-unit"><strong>15&#176;</strong></div>
+              <div class="weather-forecast-unit2">9&#176;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-details">
+            <div class="weather-forecast-day">Thu</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-degree">
+              <div class="weather-forecast-unit"><strong>15&#176;</strong></div>
+              <div class="weather-forecast-unit2">9&#176;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-details">
+            <div class="weather-forecast-day">Fri</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-degree">
+              <div class="weather-forecast-unit"><strong>15&#176;</strong></div>
+              <div class="weather-forecast-unit2">9&#176;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-details">
+            <div class="weather-forecast-day">Sat</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-degree">
+              <div class="weather-forecast-unit"><strong>15&#176;</strong></div>
+              <div class="weather-forecast-unit2">9&#176;</div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         This code was coded by
