--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
       </main>
       <footer>
         This code was coded by
-        <a href="https://github.com/">Mariam</a> and is on
-        <a href="https://github.com/princessmirina/weather-app1">Github</a>
+        <a href="https://github.com/princessmirina">Mariam</a> and is on
+        <a href="https://github.com/princessmirina/my-weather-application"
+          >Github</a
+        >
         and
-        <a href="https://app.netlify.com/sites/rad-brigadeiros-005042/overview"
+        <a href="https://mariam-weather-application.netlify.app"
           >hosted on Netlify</a
         >
       </footer>
