added search type to the input to clear the city

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header>
         <form class="form-container" id="weather-app-form">
           <input
-            type="text"
+            type="search"
             placeholder="Enter a city....."
             required
             class="search-input"
@@ -46,7 +46,7 @@
           >Github</a
         >
         and
-        <a href="https://mariam-weather-application.netlify.app"
+        <a href="https://mariam-weather-application.netlify.app/"
           >hosted on Netlify</a
         >
       </footer>
